aws-vpc-tf/internet-gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.test_vpc.id
  tags = {
    Name = "test-igw"
  }
  provider = aws
}
